  * DVD menu button highlight position fixes
  * internal engine changes to allow a new layer of post effect plugins
  * VCD playback fixed (actually it was a bug in the real demuxer)
  * pnm input plugin (old real network protocol)
  * real demuxer fixes
  * use binary real codecs to decode rv20/30 video, sipro/cook audio
    (experimental)
  * arts audio output plugin ported to new architecture
	
xine-lib (1.0.0-alpha1) 
  * transport stream demuxer fixes
  * DVD playback should be working again (please report DVDs that don't play!)
  * stdin_fifo input plugin
  * vcd input plugin  
  * native Windows Media Audio (a.k.a. WMA, DivX audio) decoding via ffmpeg
  * XviD decoder is working again
  * DV decoder (ffmpeg)

xine-lib (1.0.0-alpha0) 

  * dvd plugin replaced by dvdnav with full menu support
  * fix segfault on exit for w32codecs
  * fix yuy2 on xshm bug (affects w32codecs and msvc)
  * reimplemented x/y zoom
  * Wing Commander III MVE movie file demuxer
  * Creative Voice (VOC) file demuxer
  * Westwood Studios VQA file demuxer
  * AIFF file demuxer
  * Sun/NeXT SND/AU file demuxer
  * YUV4MPEG2 file demuxer
  * RealMedia & RealAudio file demuxers
  * Electronic Arts WVE file demuxer
  * Id CIN video decoder
  * QT RLE video decoder
  * QT SMC video decoder
  * QT RPZA video decoder
  * Wing Commander III video decoder
  * Logarithmic PCM (mu-law & A-law) audio decoder
  * GSM 6.10 audio decoder
  * Electronic Arts ADPCM audio decoder
  * time-based seeking in ogg-streams
  * improved support for ogg-streams containing video (so-called ogm streams)
  * spu encoding for full overlay support with dxr3
  * icecast/shoutcast support
  * dvd raw device support
  * decode id3v1 tags in mp3 files 
  * updated internal liba52 to version 0.7.4
  * numeric selection of dvd menu buttons (could make some dvd easter eggs accesible)
  * big api cleanup
  * xine engine can open more than one stream at a time
  * audio compressor filter