@@ -23,7 +23,6 @@ required for 1.0
 - xvid decoder plugin (guenter)
 - faad decoder plugin
 - opengl video output plugin
-- esd audio output plugin (guenter)
 - irix audio output plugin (matthias)
 - null audio plugin (or fix null video out)
 - input_dvd: detect errors, display useful error messages (guenter)
